# valagtk

./: README.md  meson.build
data/: app.ui  meson.build  org.gnome.ValaGtk.gresource.xml
src/: Application.vala  main.vala  meson.build
